--- a/src/app.css
+++ b/src/app.css
@@ -5,11 +5,23 @@
   src: url('/fonts/pixel.woff2');
 }
 
+/* Light Mode */
 :root {
-  --background-color: #121212;
-  --text-color: #ffffff;
   --primary-cyan: #0891b2;
   --primary-green: #16a34a;
+
+  --background-color: #d1d5db;
+  --text-color: #121212;
+}
+
+/* Dark Mode */
+/* Note to Jae: Let users choose if they want DARK or LIGHT mode without forcing system change */
+[data-theme="dark"] {
+  --primary-cyan: #0891b2;
+  --primary-green: #16a34a;
+
+  --background-color: #121212;
+  --text-color: #d1d5db;
 }
 
 body {
@@ -26,4 +38,23 @@ body {
 
 .text-cyan {
   color: var(--primary-cyan);
+}
+
+.floof-container {
+  margin: auto;
+  width: 100%;
+  max-width: 1500px;
+  border: 3px solid var(--primary-cyan);
+  box-sizing: border-box;
+  padding-left: 3rem;
+}
+
+@media (max-width: 991px) {
+  .floof-container {
+    margin: auto;
+    width: 100%;
+    /* max-width: 95vw; */
+    border: 3px solid var(--primary-cyan);
+    box-sizing: border-box;
+  }
 }
