--- a/pages/index.hbs
+++ b/pages/index.hbs
@@ -26,18 +26,18 @@
                         <p>Pages</p>
                         <ul>
                             <li><a href="/">Index</a></li>
-                            <li><a href="/blog/">Blog</a></li>
+                            <li><a href="/blog">Blog</a></li>
                         </ul>
                         <p>Furry Content</p>
                         <ul>
-                            <li><a href="/fursuit/">Fursuit</a></li>
-                            <li><a href="/fursona/">Fursona</a></li>
+                            <li><a href="/fursuit">Fursuit</a></li>
+                            <li><a href="/fursona">Fursona</a></li>
                         </ul>
                         <p>Wiki</p>
                         <ul>
                             <li><a href="/infosec/notes">Cybersecurity Notes</a></li>
                             <li><a href="https://docs.lynix.ca/">Documentation</a></li>
-                            <li><a href="/experiments/">Experiments</a></li>
+                            <li><a href="/experiments">Experiments</a></li>
                         </ul>
                     </div>
                 </div>
