--- a/assets/app.css
+++ b/assets/app.css
@@ -185,21 +185,26 @@ a {
 }
 
 /* Mobile Responsiveness */
-@media (max-width: 991px) {
-    body {
-        padding: 0px;
-    }
+@media (min-width:320px)  { /* smartphones, portrait iPhone, portrait 480x320 phones (Android) */ }
+@media (min-width:480px)  {
+        body {
+            padding: 0px;
+        }
 
-    .floof-container {
-        flex-wrap: wrap;
-    }
+        .floof-container {
+            flex-wrap: wrap;
+        }
 
-    .floof-navigation {
-        min-width: 100%;
-        max-width: 100%;
-        width: 100%;
-    }
+        .floof-navigation {
+            min-width: 100%;
+            max-width: 100%;
+            width: 100%;
+        }
 }
+@media (min-width:600px)  { /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */ }
+@media (min-width:801px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */ }
+@media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ }
+@media (min-width:1281px) { /* hi-res laptops and desktops */ }
 
 .floof-navigation .floof-card {
     border: 3px solid var(--primary-green);
