Add Image Optimization API

--- a/pages/layouts/layout.html
+++ b/pages/layouts/layout.html
@@ -11,7 +11,7 @@
 <body>
         <div class="floof-page">
             <header class="floof-header">
-                <a href="/">
+                <a href="/static">
                     <h1>
                         <span class="title">LYNIX.CA</span><br />
                         <span class="subtitle">Cyber Beeps'n Boops</span>
@@ -28,7 +28,7 @@
                         <div class="content">
                             <p>Pages</p>
                             <ul>
-                                <li><a href="/">Index</a></li>
+                                <li><a href="/static">Index</a></li>
                                 <li><a href="/blog">Blog</a></li>
                             </ul>
                             <p>Furry Content</p>
@@ -55,6 +55,7 @@
                         <li>[<span style="color:#22c55e;">OK</span>] api.lynix.ca</li>
                         <li>[<span style="color:#22c55e;">OK</span>] matrix (conduit)</li>
                         <li>[<span style="color:#22c55e;">OK</span>] ns</li>
+                        <li>[<span style="color:#b91c1c;">OK</span>] Lynixless (NeosVR)</li>
                     </ul>
                     <hr/>
                     <p>Copyright 2022-2023 <a href="https://lynix.ca/" class="h-card" rel="me">cyberlynix</a>, this page style is inspired by <a href="https://777.tf/" rel="jae">Jae Lo Presti</a>; Powered by <a href="https://github.com/cyberlynix/floof-render" rel="Floof Render Coming Soon! Built in Rust">FloofRender</a> & <a href="https://svelte.dev/" rel="Svelte Framework: cybernetically enhanced web apps">Svelte</a>, under the GNU AGPLv3;</p>
