--- a/pages/layouts/layout.html
+++ b/pages/layouts/layout.html
@@ -55,7 +55,7 @@
                         <li>[<span style="color:#22c55e;">OK</span>] api.lynix.ca</li>
                         <li>[<span style="color:#22c55e;">OK</span>] matrix (conduit)</li>
                         <li>[<span style="color:#22c55e;">OK</span>] ns</li>
-                        <li>[<span style="color:#b91c1c;">OK</span>] Lynixless (NeosVR)</li>
+                        <li>[<span style="color:#c2410c;">DOWN</span>] Lynixless (Resonite)</li>
                     </ul>
                     <hr/>
                     <p>Copyright 2022-2023 <a href="https://lynix.ca/" class="h-card" rel="me">cyberlynix</a>, this page style is inspired by <a href="https://777.tf/" rel="jae">Jae Lo Presti</a>; Powered by <a href="https://github.com/cyberlynix/floof-render" rel="Floof Render Coming Soon! Built in Rust">FloofRender</a> & <a href="https://svelte.dev/" rel="Svelte Framework: cybernetically enhanced web apps">Svelte</a>, under the GNU AGPLv3;</p>
