--- a/src/app.css
+++ b/src/app.css
@@ -1,225 +1,141 @@
-/* GNU AGPLv3 Licence - Inspired by https://jae.fi/ (Jae Lo Presti) */
-    
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* ============= Fonts ============= */
 @font-face {
-  font-family: 'pixel';
-  src: url('/fonts/pixel.woff2');
-}
+    font-family: Cyber;
+    src: url("/fonts/cyber.ttf");
+}  
 
-/* Light Mode */
-:root {
-  --primary-cyan: #0891b2;
-  --primary-green: #16a34a;
-
-  --background-color: #d1d5db;
-  --text-color: #121212;
-  
-
-  /* Paddings */
-  --padsize: 0.625rem;
-
-  /* Margins */
-}
-
-/* Dark Mode */
-/* Note to Jae: Let users choose if they want DARK or LIGHT mode without forcing system change */
-[data-theme="dark"] {
-  --primary-cyan: #0891b2;
-  --primary-green: #16a34a;
-
-  --background-color: #121212;
-  --secondry-background-color: #18181b;
-  --text-color: #d1d5db;
-}
-
+/* ============= Styling ============= */
 body {
-  background-color: var(--background-color);
-  color: var(--text-color);
-  padding: 3rem;
-  font-family: pixel;
+  @apply bg-darker text-white font-cyber
 }
 
-p {
-  word-wrap: anywhere;
-  font-size: 1.4em;
+p, h1 {
+  @apply break-words;
 }
 
-a {
-  color: unset;
-  text-decoration-style: dotted;
-  color: var(--primary-green);
+::-moz-selection { /* Code for Firefox */
+  @apply bg-green-600 text-white
 }
 
-.text-green {
-  color: var(--primary-green);
+::selection {
+  @apply bg-green-600 text-white
 }
 
-.text-cyan {
-  color: var(--primary-cyan);
-}
-
-
-/* Page */
-.floof-page {
-  margin: auto;
-  width: 100%;
-  max-width: 1500px;
-  border: 3px solid var(--primary-cyan);
-  box-sizing: border-box;
-  min-height: 100vh;
-}
-
-/* Header */
-.floof-header {
-  border-bottom: 3px solid var(--blue);
-  padding-left: 5px;
-  max-width: 100%;
-  max-height: 150vh;
-  padding-bottom: 0;
-  margin: 0;
-  display: flex;
-  align-items: flex-end;
-
-  color: white;
-  border-bottom: 3px solid var(--primary-cyan);
-  background: linear-gradient(90deg, var(--background-color) 0%, var(--primary-cyan) 33%, var(--primary-cyan) 66%, var(--background-color));
-}
-
-.floof-header a {
-  color: white;
-  text-shadow: 5px 5px #065164;
-  text-decoration: none;
-  text-align: center;
-  width: 100%;
-}
-
-.floof-header .title {
-  font-size: 2.5em;
-}
-
-.floof-header .subtitle {
-  font-size: 1.5em;
-}
-
-/* Page Container */
-.floof-container {
-  display: flex;
-  background-color: var(--secondry-background-color);
-}
-
-/* Page Navigation */
-.floof-navigation {
-    min-width: 22%;
-    max-width: 100%;
-    padding: 0px var(--padsize) var(--padsize) var(--padsize);
-    word-wrap: break-word;
-    border-right: 3px solid var(--primary-cyan);
-    min-height: 100vh;
-}
-
-.floof-navigation h1 {
-  text-align: center;
-}
-
-.floof-navigation p {
-  padding-left: 1.2rem;
-  padding-right: 1.2rem;
-}
-
-.floof-navigation hr {
-  border-color: var(--primary-cyan);
-}
-
-/* Page Content */
-.floof-content {
-  padding: 1.5rem;
-  font-size: 1.5em;
-}
-
-/* Floof Alert */
-.floof-alert {
-  margin-top: 0.5em;
-  padding: 0.7em 5.5em 0.7em 5.5em;
-  text-align: center;
-}
-
-.floof-alert p {
-  padding: 0em;
-  margin: 0em;
-}
-
-/* Gradient Animations */
-/* Animate Gradient */
-@keyframes gradientAnimation {
-  0% {
-    background-position: 100% 50%;
+@keyframes float {
+  0%, 100% {
+    transform: translateY(-5px) rotate(6deg);
   }
   50% {
-    background-position: 0% 50%;
+    transform: translateY(-15px) rotate(6deg);
+  }
+}
+
+.float-animation {
+  animation: float 3s ease-in-out infinite;
+}
+
+@keyframes float-rev {
+  0%, 100% {
+    transform: translateY(0px) rotate(-6deg);
+  }
+  50% {
+    transform: translateY(-7px) rotate(-6deg);
+  }
+}
+
+.float-animation-rev {
+  animation: float-rev 4.5s ease-in-out infinite;
+}
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  @apply bg-darker;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  @apply bg-green-600;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  @apply bg-green-700;
+}
+
+
+
+.nav-link {
+  @apply flex items-center md:justify-center font-cyber text-xl px-4 py-2 mt-2 text-gray-900 dark:hover:bg-green-700 dark:focus:bg-green-700 dark:focus:text-white dark:hover:text-white dark:text-gray-200 md:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none;
+}
+
+.auth-btn {
+  @apply flex items-center justify-center font-cyber text-xl px-4 py-2 mt-2 text-gray-900 dark:hover:bg-dark dark:focus:bg-dark dark:focus:text-white dark:hover:text-white dark:text-gray-200 md:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none;
+}
+
+.auth-btn-2 {
+  @apply flex items-center justify-center font-cyber text-xl px-4 py-2 mt-2 text-dark dark:hover:bg-green-700 transition-colors dark:focus:bg-green-700 dark:focus:text-dark dark:hover:text-gray-900 dark:text-gray-900 md:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none;
+}
+.dropdown-link {
+  @apply block px-4 py-2 mt-2 font-cyber bg-transparent  dark:bg-transparent dark:hover:bg-green-700 dark:focus:bg-green-700 dark:focus:text-white dark:hover:text-white dark:text-gray-200 md:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none;
+}
+
+/* Animate Gradiant */
+@keyframes gradientAnimation {
+  0% {
+      background-position: 100% 50%;
+  }
+  50% {
+      background-position: 0% 50%;
   }
   100% {
-    background-position: 100% 50%;
+      background-position: 100% 50%;
   }
 }
 
 .animated-gradient {
   background-size: 200% 200%;
   animation: gradientAnimation 15s infinite;
-  background-image: linear-gradient(to right, var(--primary-cyan), var(--primary-green));
-  color: #121212;
 }
 
-.sidepfp {
-  float: right;
-  max-width: 10em;
-  border: 3px solid var(--primary-cyan);
-  margin-left: 2em;
-  margin-right: 2em;
-}
-
-.floof-content p {
-  font-size: 1.1em;
-}
-
-.floof-content hr {
-  border-color: var(--primary-cyan);
-}
-
-/* Mobile Responsiveness */
-@media (max-width: 991px) {
-  body {
-    padding: 0px;
-  }
-
-  .floof-container {
-    flex-wrap: wrap;
+/* Typing */
+@keyframes typing {
+  from {
+    width: 0;
   }
 }
 
-.floof-navigation .floof-card {
-  border: 3px solid var(--primary-green);
-  font-size: 1.5rem;
-  padding: 0px;
+@keyframes blink-caret {
+  50% {
+    border-color: transparent;
+  }
 }
 
-.floof-navigation .floof-card .floof-header {
-  border-bottom: 3px solid var(--primary-green);
-  background: linear-gradient(90deg, var(--background-color) 0%, var(--primary-green) 33%, var(--primary-green) 66%, var(--background-color));
+.animate-typing-container {
+  display: inline-block;
+  position: relative;
 }
 
-.floof-navigation .floof-card .floof-header h3 {
-  font-size: 4rem;
+.animate-typing-text {
+  white-space: nowrap;
+  overflow: hidden;
+  border-right: 3px solid;
+  animation: typing 3s steps(40, end);
 }
 
-.floof-navigation .floof-card p {
-  margin: 1rem;
-  padding-left: 0px;
-}
-
-.floof-navigation .floof-card ul {
-  margin: 1rem;
-  padding-left: 2.3rem;
-}
-
-.floof-navigation .floof-card a {
-  color: var(--primary-cyan)
+.animate-typing-caret {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 3px;
+  height: 100%;
+  background-color: #000; /* Adjust the caret color as needed */
+  animation: blink-caret 0.75s step-end infinite;
 }
